# Lumina-Engine

./: .gitignore  CMakeLists.txt  README.md
Assets/Models/Radio/: SM_HandRadio.fbx
Lumina/Editor/: CMakeLists.txt  main.cpp
Lumina/Editor/include/Editor/: LuminaEditor.h
Lumina/Editor/include/Editor/TestLayer/: ITestLayer.h  (+1 more)
Lumina/Editor/src/: LuminaEditor.cpp
Lumina/Editor/src/TestLayer/: PBRModelTestLayer.cpp
Lumina/Engine/: CMakeLists.txt
Lumina/Engine/include/Assets/: ModelLoader.h  StaticModel.h
Lumina/Engine/include/Engine/: Camera.h  Input.h  LuminaApp.h  LuminaEngine.h  Settings.h
Lumina/Engine/src/: Camera.cpp  Input.cpp  LuminaEngineWindowEvents.cpp  ModelLoader.cpp  StaticModel.cpp
Lumina/Platform/: CMakeLists.txt
Lumina/Platform/include/Platform/: IWindow.h
Lumina/Platform/src/: Window.cpp
Lumina/Renderer/: CMakeLists.txt
Lumina/Renderer/include/Renderer/D3D12Core/: CommandQueue.h  Common.h  GraphicsDevice.h
Lumina/Renderer/include/Renderer/RenderCore/: Material.h  PipelineState.h  ResourceView.h  RootSignature.h  Shader.h  ShaderCompiler.h
Lumina/Renderer/include/Renderer/Rendering/: DeferredShadingRenderer.h  Mesh.h
Lumina/Renderer/include/Renderer/Scene/: Scene.h  SceneView.h
Lumina/Renderer/src/D3D12Core/: CommandQueue.cpp  Device.cpp  Fence.cpp  GraphicsDevice.cpp  SwapChain.cpp
Lumina/Renderer/src/RenderCore/: BasePassMaterial.cpp  Buffer.cpp  Material.cpp  PipelineState.cpp  ResourceHeaps.cpp  ResourceView.cpp  RootSignature.cpp  Shader.cpp  ShaderCompiler.cpp  Texture.cpp  TextureManager.cpp
Lumina/Renderer/src/Rendering/: DeferredShadingRenderer.cpp  SceneRenderTargets.cpp
Lumina/Samples/: CMakeLists.txt  main.cpp
Lumina/Samples/include/Samples/: ModelApp.h
Lumina/Samples/src/: ModelApp.cpp
Lumina/Source/Core/: CMakeLists.txt
Lumina/Source/Core/include/Logger/: Logger.h
Lumina/Source/Core/include/Profiler/: Profiler.h
Lumina/Source/Core/include/StringUtils/: StringConv.h
Lumina/Source/Core/src/: Logger.cpp  Profiler.cpp  StringConv.cpp
Lumina/Source/Engine/: CMakeLists.txt
Lumina/Source/Engine/include/Assets/: StaticModel.h
Lumina/Source/Engine/include/Engine/: Camera.h  LuminaApp.h  LuminaEngine.h
Lumina/Source/Engine/include/Engine/World/: FScene.h
Lumina/Source/Engine/src/: Camera.cpp  LuminaApp.cpp  LuminaEngineMain.cpp  LuminaEngineWindowEvents.cpp  StaticModel.cpp
Lumina/Source/Engine/src/World/: FScene.cpp
Lumina/Source/Platform/: CMakeLists.txt
Lumina/Source/Platform/include/Platform/: IWindow.h  Window.h
Lumina/Source/Platform/src/: Window.cpp
Lumina/Source/Renderer/: CMakeLists.txt
Lumina/Source/Renderer/include/Renderer/: MeshType.h  RenderTypes.h  Renderer.h
Lumina/Source/Renderer/include/Renderer/D3D12Core/: CommandQueue.h  Common.h  D3D12Backend.h  Device.h  Fence.h  GraphicsDevice.h  ResourceHeaps.h  RootSignature.h  ShaderCompiler.h  SwapChain.h  Texture.h
Lumina/Source/Renderer/include/Renderer/D3D12Core/Core/: CommandContext.h  CommandQueue.h  Device.h  FCommandContext.h  FCommandQueue.h  FDevice.h  FSwapChain.h  SwapChain.h
Lumina/Source/Renderer/include/Renderer/D3D12Core/Descriptors/: FBindlessDescriptorHeap.h  FDescriptorAllocation.h  FDescriptorAllocator.h  FDescriptorAllocatorPage.h  FDynamicDescriptorHeap.h
Lumina/Source/Renderer/include/Renderer/D3D12Core/Pipeline/: PipelineState.h  RootSignature.h
Lumina/Source/Renderer/include/Renderer/D3D12Core/Resource/: Buffer.h  FBuffer.h  FResourceUploader.h  FTexture.h  GpuResource.h  ResourceUploader.h  Texture.h
Lumina/Source/Renderer/include/Renderer/Managers/: FTextureManager.h
Lumina/Source/Renderer/include/Renderer/RenderCore/: BasePassMaterial.h  Buffer.h  DeferredLightingMaterial.h  Material.h  ResourceHeaps.h  SkyboxMaterial.h  TextureManager.h
Lumina/Source/Renderer/include/Renderer/RenderPass/: FBasePass.h  IRenderPass.h
Lumina/Source/Renderer/include/Renderer/Rendering/: DeferredShadingRenderer.h  Mesh.h  SceneRenderTargets.h
Lumina/Source/Renderer/include/Renderer/Resources/: FFrameResource.h  FMaterial.h  FMesh.h
Lumina/Source/Renderer/include/Renderer/Scene/: FSceneView.h  Scene.h
Lumina/Source/Renderer/include/Renderer/UI/: UIRenderer.h
Lumina/Source/Renderer/src/: Renderer.cpp
Lumina/Source/Renderer/src/D3D12Core/: Buffer.cpp  CommandQueue.cpp  D3D12Backend.cpp  Device.cpp  GraphicsDevice.cpp  PipelineState.cpp  ResourceHeaps.cpp  ResourceView.cpp  RootSignature.cpp  Shader.cpp  ShaderCompiler.cpp  SwapChain.cpp  Texture.cpp
Lumina/Source/Renderer/src/D3D12Core/Core/: CommandContext.cpp  CommandQueue.cpp  Device.cpp  FCommandContext.cpp  FCommandQueue.cpp  FDevice.cpp  FSwapChain.cpp  SwapChain.cpp
Lumina/Source/Renderer/src/D3D12Core/Descriptors/: FBindlessDescriptorHeap.cpp  FDescriptorAllocation.cpp  FDescriptorAllocator.cpp  FDescriptorAllocatorPage.cpp  FDynamicDescriptorHeap.cpp
Lumina/Source/Renderer/src/D3D12Core/Pipeline/: PipelineState.cpp  RootSignature.cpp  Shader.cpp  ShaderCompiler.cpp
Lumina/Source/Renderer/src/D3D12Core/Resource/: Buffer.cpp  FBuffer.cpp  FResourceUploader.cpp  FTexture.cpp  ResourceUploader.cpp  Texture.cpp
Lumina/Source/Renderer/src/Managers/: FTextureManager.cpp
Lumina/Source/Renderer/src/RenderCore/: BasePassMaterial.cpp  Buffer.cpp  DeferredLightingMaterial.cpp  Material.cpp  PipelineState.cpp  ResourceHeaps.cpp  RootSignature.cpp  ShaderCompiler.cpp  SkyboxMaterial.cpp  TextureManager.cpp
Lumina/Source/Renderer/src/RenderPass/: FBasePass.cpp
Lumina/Source/Renderer/src/Rendering/: DeferredShadingRenderer.cpp  Mesh.cpp  SceneRenderTargets.cpp
Lumina/Source/Renderer/src/Resources/: FFrameResource.cpp  FMaterial.cpp  FMesh.cpp
Lumina/Source/Renderer/src/UI/: UIRenderer.cpp
Lumina/Utils/Assimp/: CMakeLists.txt
Lumina/Utils/FrameTimer/: CMakeLists.txt
Lumina/Utils/FrameTimer/src/: FrameTimer.cpp
Lumina/Utils/ImGUI/src/: imgui_demo.cpp  imgui_draw.cpp
Lumina/Utils/Logger/: CMakeLists.txt
Lumina/Utils/Logger/src/: Logger.cpp
Shaders/: BasePass.hlsl  Common.hlsli  DeferredLighting.hlsl  SkyBox.hlsl
(+4 files in other folders)
